# new-years-day

./: .gitignore  App.tsx  Makefile  api.ts  package.json
api/: .gitignore  Makefile  READMe.md  main.py  pyproject.toml
api/.devcontainer/: Dockerfile  devcontainer.json
api/new_years_day/: __init__.py
api/new_years_day/db/: __init__.py  base.py  engine.py  task.py  work.py
api/new_years_day/models/: __init__.py  camel.py  task.py  work.py
api/new_years_day/repo/: __init__.py  task.py  work.py
features/progress/: Progress.tsx  progressSlice.ts
features/settings/: Settings.tsx
features/tasks/: AddTask.tsx  TaskList.tsx
features/work/: AddWork.tsx  workSlice.ts
infrastructure/: Makefile  main.tf  outputs.tf  setup.sh.tpl  variables.tf
infrastructure/cluster/: main.tf
infrastructure/db/: main.tf  outputs.tf  variables.tf
infrastructure/network/: main.tf  outputs.tf
infrastructure/service/: main.tf  variables.tf
infrastructure/service/task_execution_role/: main.tf
infrastructure/service/task_role/: main.tf  outputs.tf
new_years_day/: App.tsx  api.ts  app.json  package.json
new_years_day/app/: store.ts
new_years_day/features/progress/: Progress.tsx
new_years_day/features/settings/: settingsSlice.ts
new_years_day/features/tasks/: AddTask.tsx  TaskList.tsx  taskSlice.ts
new_years_day/features/work/: AddWork.tsx  WorkList.tsx  WorkPanel.tsx  workSlice.ts
